--- a/config/application.yml.sample
+++ b/config/application.yml.sample
@@ -7,6 +7,7 @@ development:
   ccavenue_working_key: CD1D07267064B35491DDFD12A42DBF60
   ccavenue_access_code: AVMQ07CK67CA86QMAC
   ccavenue_merchant_id: 80330
+  min_fb_likes_for_registration: 100
 
 staging:
   fb_app_id: 416032111928640
@@ -17,6 +18,7 @@ staging:
   ccavenue_working_key: CD1D07267064B35491DDFD12A42DBF60
   ccavenue_access_code: AVMQ07CK67CA86QMAC
   ccavenue_merchant_id: 80330
+  min_fb_likes_for_registration: 100
 
 test:
   fb_app_id: 416032111928640
