add from email ( form where all email will sent) and admin email ( contact us mail receiver) to application.yml that we will use in future

--- a/config/application.yml
+++ b/config/application.yml
@@ -8,6 +8,8 @@ development:
   ccavenue_access_code: AVMQ07CK67CA86QMAC
   ccavenue_merchant_id: 80330
   min_fb_likes_for_registration: 5
+  from_email: 'support@thebrandreach.com'
+  admin_email: ''
 
 staging:
   fb_app_id: 416032111928640
@@ -19,6 +21,8 @@ staging:
   ccavenue_access_code: AVMQ07CK67CA86QMAC
   ccavenue_merchant_id: 80330
   min_fb_likes_for_registration: 5
+  from_email: 'support@thebrandreach.com'
+  admin_email: ''
 
 test:
   fb_app_id: 416032111928640
@@ -26,6 +30,8 @@ test:
   pubnub_subscribe_key: "sub-c-726bd9f8-3a48-11e4-87bf-02ee2ddab7fe"
   pubnub_publish_key: "pub-c-0da552d0-4fd6-4ec6-b841-7ed3b689312a"
   pubnub_secret_key: "sec-c-YjM1N2M1YzQtZDU3YS00NjM2LWFmNDYtMGJmMGI3ZTVlMzEx"
+  from_email: 'support@thebrandreach.com'
+  admin_email: ''
 
 production:
   fb_app_id: 416032111928640
@@ -33,3 +39,5 @@ production:
   pubnub_subscribe_key: "sub-c-726bd9f8-3a48-11e4-87bf-02ee2ddab7fe"
   pubnub_publish_key: "pub-c-0da552d0-4fd6-4ec6-b841-7ed3b689312a"
   pubnub_secret_key: "sec-c-YjM1N2M1YzQtZDU3YS00NjM2LWFmNDYtMGJmMGI3ZTVlMzEx"
+  from_email: 'support@thebrandreach.com'
+  admin_email: ''
